--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  },
   "dependencies": {
+    "@e2b/code-interpreter": "^1.5.1",
     "@inngest/agent-kit": "^0.9.0",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-slot": "^1.2.3",
@@ -32,10 +30,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.6",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.3",
-    "zod": "^4.0.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
