--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "global": "^4.4.0",
     "inngest": "^3.40.1",
     "inngest-cli": "^1.8.2",
@@ -27,8 +28,10 @@
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "prisma": "^6.11.1",
+    "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^3.0.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
     "superjson": "^2.2.2",
@@ -42,9 +45,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
