--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@e2b/code-interpreter": "^1.5.1",
+    "@hookform/resolvers": "^5.2.0",
     "@inngest/agent-kit": "^0.9.0",
     "@prisma/client": "^6.11.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
     "@trpc/client": "^11.4.3",
     "@trpc/server": "^11.4.3",
@@ -28,9 +33,11 @@
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "prisma": "^6.11.1",
+    "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^3.0.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
@@ -43,6 +50,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
