--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@hookform/resolvers": "^5.2.0",
     "@inngest/agent-kit": "^0.9.0",
     "@prisma/client": "^6.11.1",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -29,7 +32,7 @@
     "global": "^4.4.0",
     "inngest": "^3.40.1",
     "inngest-cli": "^1.8.2",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.534.0",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "prisma": "^6.11.1",
