--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.28.1",
+    "@clerk/themes": "^2.4.4",
     "@e2b/code-interpreter": "^1.5.1",
     "@hookform/resolvers": "^5.2.0",
     "@inngest/agent-kit": "^0.9.0",
