--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prisma": "^6.11.1",
     "prismjs": "^1.30.0",
     "random-word-slugs": "^0.1.7",
+    "rate-limiter-flexible": "^7.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
