--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rate-limiter-flexible": "^7.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^3.0.3",
     "server-only": "^0.0.1",
